Model Evaluation and Pusher

--- a/notebook/Feature_Eng_and_Model_Training.ipynb
+++ b/notebook/Feature_Eng_and_Model_Training.ipynb
@@ -284,7 +284,7 @@
     }
    ],
    "source": [
-    "df.head()\n"
+    "df.head()"
    ]
   },
   {
@@ -882,13 +882,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create Column Transformer with 3 types of transformers\n",
-    "or_columns = ['has_job_experience','requires_job_training','full_time_position','education_of_employee']\n",
-    "oh_columns = ['continent','unit_of_wage','region_of_employment']\n",
+    "or_columns = ['has_job_experience','requires_job_training','full_time_position','education_of_employee'] #ordinal encoding\n",
+    "oh_columns = ['continent','unit_of_wage','region_of_employment']  #oneHotEncoding\n",
     "transform_columns= ['no_of_employees','company_age']\n",
     "\n",
     "from sklearn.preprocessing import OneHotEncoder, StandardScaler,OrdinalEncoder, PowerTransformer\n",
@@ -915,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -924,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -945,7 +945,7 @@
        "        -0.06776315,  0.45814768]])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -963,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -984,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -993,7 +993,7 @@
        "((13629, 24), (3408, 24))"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1007,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1024,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1039,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1059,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1133,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1149,11 +1149,11 @@
       "- Roc Auc Score: 1.0000\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Accuracy: 0.9519\n",
-      "- F1 score: 0.9558\n",
-      "- Precision: 0.9472\n",
-      "- Recall: 0.9647\n",
-      "- Roc Auc Score: 0.9508\n",
+      "- Accuracy: 0.9495\n",
+      "- F1 score: 0.9536\n",
+      "- Precision: 0.9474\n",
+      "- Recall: 0.9598\n",
+      "- Roc Auc Score: 0.9486\n",
       "===================================\n",
       "\n",
       "\n",
@@ -1166,11 +1166,11 @@
       "- Roc Auc Score: 1.0000\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Accuracy: 0.9237\n",
-      "- F1 score: 0.9298\n",
-      "- Precision: 0.9243\n",
-      "- Recall: 0.9353\n",
-      "- Roc Auc Score: 0.9227\n",
+      "- Accuracy: 0.9249\n",
+      "- F1 score: 0.9310\n",
+      "- Precision: 0.9235\n",
+      "- Recall: 0.9386\n",
+      "- Roc Auc Score: 0.9237\n",
       "===================================\n",
       "\n",
       "\n",
@@ -1309,7 +1309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1341,7 +1341,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Random Forest</td>\n",
-       "      <td>0.951878</td>\n",
+       "      <td>0.949531</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1361,7 +1361,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Decision Tree</td>\n",
-       "      <td>0.923709</td>\n",
+       "      <td>0.924883</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1389,18 +1389,18 @@
       ],
       "text/plain": [
        "                  Model Name  Accuracy\n",
-       "0              Random Forest  0.951878\n",
+       "0              Random Forest  0.949531\n",
        "4     K-Neighbors Classifier  0.941608\n",
        "5              XGBClassifier  0.935153\n",
        "6     CatBoosting Classifier  0.928110\n",
-       "1              Decision Tree  0.923709\n",
+       "1              Decision Tree  0.924883\n",
        "2          Gradient Boosting  0.879108\n",
        "7  Support Vector Classifier  0.857101\n",
        "8        AdaBoost Classifier  0.845951\n",
        "3        Logistic Regression  0.725939"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1418,7 +1418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1443,7 +1443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1464,7 +1464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1504,7 +1504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1515,7 +1515,7 @@
        " 'KNN': {'weights': 'distance', 'n_neighbors': 4, 'algorithm': 'auto'}}"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1533,7 +1533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1549,11 +1549,11 @@
       "- Roc Auc Score: 1.0000\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Accuracy: 0.9539\n",
-      "- F1 score: 0.9577\n",
-      "- Precision: 0.9502\n",
-      "- Recall: 0.9652\n",
-      "- Roc Auc Score: 0.9530\n",
+      "- Accuracy: 0.9522\n",
+      "- F1 score: 0.9560\n",
+      "- Precision: 0.9501\n",
+      "- Recall: 0.9620\n",
+      "- Roc Auc Score: 0.9513\n",
       "===================================\n",
       "\n",
       "\n",
@@ -1606,7 +1606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1643,7 +1643,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Random Forest Classifier</td>\n",
-       "      <td>0.953932</td>\n",
+       "      <td>0.952171</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1657,11 +1657,11 @@
       "text/plain": [
        "                 Model Name  Accuracy\n",
        "1      KNeighborsClassifier  0.968310\n",
-       "0  Random Forest Classifier  0.953932\n",
+       "0  Random Forest Classifier  0.952171\n",
        "2             XGBClassifier  0.944836"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1672,7 +1672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1707,16 +1707,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x12eca3ad370>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x29b0acae100>"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1742,6 +1742,59 @@
    "source": [
     "# Best Model is K-Nearest Neighbor(KNN) with Accuracy 96.83%"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prediction: Certified\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "user_data = {\n",
+    "    \"continent\": \"Asia\",\n",
+    "    \"education_of_employee\": \"Master's\",\n",
+    "    \"has_job_experience\": \"Y\",\n",
+    "    \"requires_job_training\": \"N\",\n",
+    "    \"no_of_employees\": 2412,\n",
+    "    \"region_of_employment\": \"Northeast\",\n",
+    "    \"prevailing_wage\": 83425.65,\n",
+    "    \"unit_of_wage\": \"Year\",\n",
+    "    \"full_time_position\": \"Y\"\n",
+    "}\n",
+    "\n",
+    "user_df = pd.DataFrame([user_data])\n",
+    "\n",
+    "user_df[\"company_age\"] = 2024 - 2002 \n",
+    "\n",
+    "if 'yr_of_estab' in user_df.columns:\n",
+    "    user_df.drop(\"yr_of_estab\", axis=1, inplace=True)\n",
+    "\n",
+    "user_X = preprocessor.transform(user_df)\n",
+    "\n",
+    "best_model.fit(X_train, y_train) \n",
+    "\n",
+    "prediction = best_model.predict(user_X)\n",
+    "\n",
+    "result = \"Denied\" if prediction[0] == 1 else \"Certified\"\n",
+    "\n",
+    "print(f\"Prediction: {result}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
